# FastSpeech2-lightning

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.yaml
config/data/: default.yaml
config/model/: default.yaml
config/preprocess/: default.yaml
config/preprocess/preprocess_dataset/: JSUT.yaml
config/train/: default.yaml
src/: preprocess.py  train.py  utils.py
src/datamodule/: collate_fn.py  fs2_datamodule.py
src/dataset/: alignment.py  jsut.py  preprocessDataset.py  preprocessor.py
src/model/: fastspeech2.py  fs2_lightning_module.py  loss.py  modules.py  utils.py
src/model/transformer/: Models.py
src/preprocess_dataset/: alignment.py  jsut.py  preprocessor.py
