[tool.poetry]
name = "fastspeech2-lightning"
version = "0.1.0"
description = "Fastspeech2 training script based on lightning"
authors = ["Wataru Nakata <wataru9871@gmail.com>"]
readme = "README.md"
packages = [{include = "fastspeech2_lightning"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
hydra-core = "^1.3.2"
pyworld = "^0.3.2"
webdataset = "^0.2.39"
scipy = "^1.10.1"
pyrootutils = "^1.0.4"
torch = "^2.0.0"
torchaudio = "^2.0.1"
pytorch-lightning = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
